Generate .toList() instead of .collect(...)